# cryptol-compiler

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  baseline.sh  cabal.GHC-9.2.8.config  cabal.project  cabal.project.dockerfile  cryptol-compiler.cabal  gen_expected.sh  run-specific-tests  run-test
.github/: ci.sh
.github/workflows/: cargo-deny.yml  haskell.yml
app/: Main.hs  Options.hs
devel-notes/: stream.rs
doc/: SequencesInRust.md  index.html
doc/haddock/: Cryptol-Compiler-Cry2IR-Monad.html  Cryptol-Compiler-Cry2IR-RecursiveStreams.html  Cryptol-Compiler-IR-Common.html  Cryptol-Compiler-IR-EvalType.html  Cryptol-Compiler-IR-Prims.html  Cryptol-Compiler-IR-Subst.html  Cryptol-Compiler-Monad.html  Cryptol-Compiler-PP.html  Cryptol-Compiler-Rust-CodeGen.html  Cryptol-Compiler-Rust-NameMap.html  Cryptol-Compiler-Rust-Names.html  Cryptol-Compiler-Rust-Types.html  Cryptol-Compiler-Rust-Utils.html  cryptol-compiler.haddock  doc-index-36.html  doc-index-60.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-H.html  doc-index-L.html  doc-index-N.html  doc-index-P.html  doc-index-S.html  doc-index-T.html  doc-index-V.html
docs/: README.md  SequencesInRust.md  SpecializingOnSizes.md  flags.html  generated_code.html  genindex.html  index.html  library_api.html  objects.inv  search.html  searchindex.js
docs/_sources/: flags.rst.txt  generated_code.rst.txt  index.rst.txt
docs/_static/haddock/: Cryptol-Compiler-Cry2IR-Compile.html  Cryptol-Compiler-Cry2IR-ConvertM.html  Cryptol-Compiler-Cry2IR-Monad.html  Cryptol-Compiler-Cry2IR-RecursiveStreams.html  Cryptol-Compiler-IR-Common.html  Cryptol-Compiler-IR-Free.html  Cryptol-Compiler-IR-Opt.html  Cryptol-Compiler-IR-Prims.html  Cryptol-Compiler-IR.html  Cryptol-Compiler-Rust-CodeGen.html  Cryptol-Compiler-Rust-CompilePrim.html  Cryptol-Compiler-Rust-CompileStream.html  Cryptol-Compiler-Rust-CompileTrait.html  Cryptol-Compiler-Rust-CompileType.html  Cryptol-Compiler-Rust-Crate.html  Cryptol-Compiler-Rust-ModuleTree.html  Cryptol-Compiler-Rust-Monad.html  Cryptol-Compiler-Rust-NameMap.html  Cryptol-Compiler-Rust-Names.html  Cryptol-Compiler-Rust-Utils.html  Cryptol-IR-LambdaLift.html  cryptol-compiler.haddock  doc-index-36.html  doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-G.html  doc-index-L.html  doc-index-M.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-U.html  doc-index-V.html  doc-index.json  index.html
docs/haddock/: Cryptol-Compiler-Cry2IR-Compile.html  Cryptol-Compiler-Cry2IR-InstanceMap.html  Cryptol-Compiler-Cry2IR-RecursiveStreams.html  Cryptol-Compiler-Cry2IR-Specialize.html  Cryptol-Compiler-Error.html  Cryptol-Compiler-IR-Cryptol.html  Cryptol-Compiler-IR-Free.html  Cryptol-Compiler-IR-Rename.html  Cryptol-Compiler-IR-Type.html  Cryptol-Compiler-IR.html  Cryptol-Compiler-Rust-Monad.html  cryptol-compiler.haddock  doc-index-A.html  doc-index-All.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-K.html  doc-index-M.html  doc-index-R.html  doc-index-S.html  doc-index-U.html  doc-index-W.html  doc-index-Z.html  doc-index.html  doc-index.json  index.html
dword/: Cargo.toml  Check.hs  test.hs
dword/src/: arith.rs  cmp.rs  conversion.rs  core.rs  display.rs  from.rs  index.rs  iter_bits.rs  iter_limbs.rs  join.rs  lib.rs  logic.rs  main.rs  poly.rs  proptest.rs  reverse.rs  shift.rs  split.rs
manual/: .gitignore  Makefile  README.md
manual/src/: conf.py  flags.md  flags.rst  generated_code.rst  index.rst  library_api.rst
rts-rust/: Cargo.toml  README.md  deny.toml
rts-rust/exe/: main.rs
rts-rust/src/: array.rs  bit.rs  bit_traits.rs  bitvec_fixed.rs  bitvec_fixed_impls.rs  cry_dword.rs  display.rs  dword.rs  dword_impls.rs  index.rs  int.rs  int_traits.rs  lib.rs  main.rs  prim_bitvec.rs  range.rs  size.rs  split.rs  stream.rs  traits.rs  transpose.rs  tuple.rs  type_traits.rs  vec.rs  word.rs  word_traits.rs
rust-experiments/cryptol_prelude/: Cargo.toml
rust-experiments/cryptol_prelude/examples/: salsa20.rs
rust-experiments/cryptol_prelude/src/: cryptol.rs  cryptol_seq.rs  lib.rs  seq.rs  stream.rs  tnum.rs  word.rs
rust-experiments/exp/: Cargo.toml
rust-experiments/exp/src/: lib.rs  split.rs
scripts/: ghc-version  haddock-dir  haddock-install
src/Cryptol/Compiler/: CompileType.hs  Driver.hs  Error.hs  IR.hs  Interval.hs  Monad.hs  PP.hs  SeqReps.hs  Simple.hs  Specialize.hs
src/Cryptol/IR/: Eta.hs  LambdaLift.hs
test/: Golden.hs  Main.hs
test/golden/: atsign_array.cry.expected  atsign_word.cry  cmp_eq.cry  cmp_eq.cry.expected  cmp_eq_array.cry  cmp_eq_bit.cry  cmp_eq_word.cry  cmp_ge_array.cry  cmp_ge_bit.cry  cmp_gt.cry  cmp_gt.cry.expected  cmp_gt_integer.cry  cmp_gt_word.cry  cmp_gte.cry  cmp_le_array.cry  cmp_le_integer.cry  cmp_le_word.cry  cmp_lt.cry  cmp_lt.cry.expected  cmp_lt_array.cry  cmp_lte.cry  cmp_lte.cry.expected  cmp_ne.cry  complement_array.cry  complement_array.cry.expected  complement_word.cry  concat_array.cry.expected  concat_word.cry  concat_word.cry.expected  drop_array.cry  drop_array.cry.expected  drop_word.cry  from_to.cry.expected  fun.cry.expected  head_array.cry  head_word.cry  join_array.cry  join_array.cry.expected  join_word.cry  join_word.cry.expected  (+80 more)
test/golden/AES/: test_aes_c1.cry  test_aes_c1.cry.expected
test/golden/core/: test_atsign_array.cry  test_atsign_array.cry.expected  test_bang_array.cry  test_bang_word.cry  test_cmp_eq_integer.cry  test_cmp_ge_integer.cry  test_cmp_ge_word.cry  test_cmp_gt_array.cry  test_cmp_gt_bit.cry  test_cmp_le_bit.cry  test_cmp_lt_bit.cry  test_cmp_lt_integer.cry  test_cmp_lt_word.cry  test_cmp_ne_array.cry  test_cmp_ne_bit.cry  test_cmp_ne_integer.cry  test_cmp_ne_word.cry  test_complement_array.cry.expected  test_concat_array.cry  test_concat_array.cry.expected  test_concat_word.cry.expected  test_drop_array.cry.expected  test_from_to.cry  test_fun.cry  (+42 more)
tests/: AES.cry  list_sel.cry  number.cry  zero.cry
(+55 files in other folders)
